--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,29 +1,27 @@
-@charset "utf-8";
-body {
-margin: 0;
-}
-.clearfix {
-display: clearfix;
+.clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
 }
 .red--box {
 width: 400px;
 height: 100px;
-background: red;
+background: #ff0000;
 }
 .green--box {
 float: left;
 width: 150px;
 height: 250px;
-background: green;
+background: #00ff1e;
 }
 .blue--box {
 
 width: 400px;
 height: 250px;
-background: blue;
+background: #3300ff;
 }
 .yellow--box {
   width: 400px;
   height: 100px;
-  background: yellow;
+  background: #ffe600;
   }
