--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,8 +15,8 @@ height: 250px;
 background: #00ff1e;
 }
 .blue--box {
-
-width: 400px;
+float: left;
+width: 250px;
 height: 250px;
 background: #3300ff;
 }
